got each forecast to display with its individual information

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     <div id="forecast-api">
         <input type="text" id="forecast-api" placeholder="Zip Code">
         <button id="forecast" onclick ='returnForecast()'>Forecast</button>
-        <p id="forecast-condition"></p>
-        <img id="forecast-icon">
-        <p id="forecast-temp"></p>
+        <ul id="forecast-list">
+            
+        </ul>
     </div>
     <br>
     <!-- Weather Map -->
