fixed current weather forecast

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="main.js"></script>
     <!-- Current Weather -->
     <article id="weather-api">
-        <input id="searchCity" type="text" placeholder="city,state">
+        <input id="searchCity" type="text" placeholder="Zip Code">
         <button id="button" onclick="returnWeather()">Submit</button>
         <p id="display"></p>
         <div id="weather-container">
@@ -23,7 +23,7 @@
     </article>
         <!-- Forecasted Weather -->
     <div id="forecast-api">
-        <input type="text" id="forecast-api" placeholder="Zip Code">
+        <!-- <input type="text" id="forecast-api" placeholder="Zip Code"> -->
         <button id="forecast" onclick ='returnForecast()'>Forecast</button>
         <ul id="forecast-list">
             
